# oop3

./: CMakeLists.txt  README.md  main.cpp
include/: Figures.h  Hexagon.h  Octagon.h  Pentagon.h
src/: Figures.cpp  Hexagon.cpp  Octagon.cpp  Pentagon.cpp
test/: test.cpp
